--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Calculatrice</title>
+    <meta charset="UTF-8">
+    <title>Calculatrice</title>
+    <script src="script.js"></script> 
 </head>
 <body>
-  <label for="valeur1">Valeur 1 :</label>
-  <input type="number" id="valeur1"><br><br>
+    <label for="valeur1">Valeur 1 :</label>
+    <input type="number" id="valeur1"><br><br>
 
-  <label for="valeur2">Valeur 2 :</label>
-  <input type="number" id="valeur2"><br><br>
+    <label for="valeur2">Valeur 2 :</label>
+    <input type="number" id="valeur2"><br><br>
 
-  <button onclick="multiplier()">Multiplier</button>
+    <button onclick="multiplier()">Multiplier</button>
 
-  <p id="resultat"></p>
+    <p id="resultat"></p>
 
 </body>
 </html>
