Added the addition

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <label for="valeur2">Valeur 2 :</label>
     <input type="number" id="valeur2"><br><br>
 
+    <button onclick="addition()">Additionner</button>
     <button onclick="multiplier()">Multiplier</button>
     <button onclick="substract()">Soustraire</button>
 
