--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <label for="valeur2">Valeur 2 :</label>
     <input type="number" id="valeur2"><br><br>
 
+    <button onclick="addition()">Additionner</button>
     <button onclick="multiplier()">Multiplier</button>
-    <button onclick="diviser()">Diviser</button>
+    <button onclick="divide()">Diviser</button>
     <button onclick="substract()">Soustraire</button>
 
     <p id="resultat"></p>
